# allocator-bot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  GEMINI.md  README.md  conftest.py  llms.md  llms.txt  main.py  pyproject.toml
.github/workflows/: docker-publish.yml  lint_and_test.yml
allocator_bot/: __main__.py  agent.py  api.py  apps.json  config.py  copilots.json  models.py  portfolio.py  prompts.py  storage.py  utils.py  validation.py  widgets.json
k8s/: 00-namespace.yaml  01-secret.yaml  02-configmap.yaml  03-service.yaml  04-deployment.yaml
tasks/resiliense/: IMPLEMENTATION_SUMMARY.md  RESILIENCE_PROPOSAL.md
tests/: test_agent.py  test_api.py  test_models.py  test_portfolio.py  test_s3_migration.py  test_storage.py  test_utils.py
