[project]
name = "allocator-bot"
version = "0.1.0"
description = "An asset allocation bot for OpenBB that uses PyPortfolioOpt to generate efficient frontier allocations."
authors = [{ name = "Theodore Aptekarev", email = "aptekarev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "boto3>=1.34.0",
    "magentic>=0.40.0",
    "openbb-ai>=1.5.0",
    "openbb-core>=1.3.7",
    "openbb-equity>=1.3.5",
    "openbb-etf>=1.3.5",
    "openbb-fmp>=1.3.5",
    "openbb-platform-api>=1.1.10",
    "pandas>=2.2.3",
    "pyportfolioopt>=1.5.6",
    "sse-starlette>=2.1.3",
    "tabulate>=0.9.0",
    "theobb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.4.0",
    "ruff>=0.4.4",
    "types-boto3>=1.38.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
allocator-bot = "allocator_bot.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["allocator_bot/**"]
