[project]
name = "allocator-bot"
version = "0.2.0"
description = "An asset allocation bot for OpenBB that uses PyPortfolioOpt to generate efficient frontier allocations."
authors = [{ name = "Theodore Aptekarev", email = "aptekarev@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp>=3.9.0",
    "boto3>=1.34.0",
    "magentic>=0.40.0",
    "openbb-ai>=1.7.4",
    "openbb-fmp>=1.3.5",
    "openbb-platform-api>=1.1.10",
    "pandas>=2.2.3",
    "pyportfolioopt>=1.5.6",
    "sse-starlette>=2.1.3",
    "tabulate>=0.9.0",
    "theobb>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "pandas-stubs>=2.2.3.250527",
    "pytest>=8.4.0",
    "ruff>=0.4.4",
    "types-boto3>=1.38.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
allocator-bot = "allocator_bot.__main__:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["allocator_bot/**"]

[dependency-groups]
dev = [
    "coverage>=7.9.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=allocator_bot --cov-report=term-missing"
